<resources>
    <string name="app_name">AplikasiBookingFutsal</string>
    <string name="judul1">LOGIN USER</string>
    <string name="judul2">Profile User</string>
    <string name="judul3">LOGIN ADMIN</string>
    <string name="judul4">Profile Admin</string>
    <string name="text1">Username</string>
    <string name="textbox1">Masukkan Username</string>
    <string name="text2">Password</string>
    <string name="textbox2">Masukkan Password</string>
    <string name="textbox3">Nama Pemesan</string>
    <string name="textbox4">Pilih Tanggal</string>
    <string name="textbox5">Uang Muka</string>
    <string name="text3">Pilih Waktu :</string>
    <string name="text4">Pilih Tipe Lapangan :</string>
    <string name="text5">Pilih Jam :</string>
    <string name="text6">Account :</string>
    <string name="text7">Mochammad Ifan Rizky Kurniawan</string>
    <string name="text8">Bio:</string>
    <string name="text9">"Bahagiakanlah kedua orang tua kalian selagi mereka masih ada dan selagi kamu bisa"</string>
    <string name="text10">Alamat :</string>k
    <string name="text11">Suryatmajan</string>
    <string name="text12">No Telepon :</string>
    <string name="text13">0895 - xxxx - xxxx</string>
    <string name="text14">Nama Pemesan :</string>
    <string name="text15">Tanggal Pesanan :</string>
    <string name="text16">Uang Muka :</string>
    <string name="text17">Pilihan Waktu :</string>
    <string name="text18">Pukul :</string>
    <string name="text19">Pilihan Tipe Lapangan :</string>
    <string name="text20">Contoh : Pagi - Sore, Sore - malam, dan seterusnya</string>
    <string name="text21">Contoh : Vinyl, Parquette, Rumput</string>
    <string name="textbox6">Mulai</string>
    <string name="textbox7">Sampai</string>
    <string name="textbox8">Nama Lapangan :</string>
    <string name="textbox9">Silahkan isikan pilihan waktu :</string>
    <string name="textbox10">Silahkan isikan tipe lapangan :</string>
    <string name="textbox11">Masukkan foto :</string>
    <string name="editUser">Mohon diisi dahulu</string>
    <string name="invalid_username">Nama username : user</string>
    <string name="invalid_pass_user">Nama Password : user</string>
    <string name="invalid_admin">Nama Username : admin</string>
    <string name="invalid_pass_admin">Nama Password : admin</string>
    <string name="invalid_name">Mohon diisi dahulu</string>
    <string name="invalid_uang">Mohon diisi dahulu</string>
    <string name="invalid_mulai">Mohon diisi dahulu</string>
    <string name="invalid_sampai">Mohon diisi dahulu</string>
</resources>
