<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileUser">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/txt"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="90dp"
            android:textAlignment="center"
            app:srcCompat="@drawable/profile"
            tools:layout_editor_absoluteX="72dp"
            tools:layout_editor_absoluteY="49dp" />

        <TextView
            android:id="@+id/textAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/text6"
            android:textColor="@color/txt"
            android:textSize="17dp">
        </TextView>
        <TextView
            android:id="@+id/textAccountName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/text7"
            android:textColor="@color/txt"
            android:textSize="13dp">
        </TextView>
        <TextView
            android:id="@+id/textBio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/text8"
            android:textColor="@color/txt"
            android:textSize="17dp">
        </TextView>
        <TextView
            android:id="@+id/textBioName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/text9"
            android:textColor="@color/txt"
            android:textSize="13dp">
        </TextView>
        <TextView
            android:id="@+id/textAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/text10"
            android:textColor="@color/txt"
            android:textSize="17dp">
        </TextView>
        <TextView
            android:id="@+id/textAlamatName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/text11"
            android:textColor="@color/txt"
            android:textSize="13dp">
        </TextView>
        <TextView
            android:id="@+id/textNoTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:hint="@string/text12"
            android:textColor="@color/txt"
            android:textSize="17dp">
        </TextView>
        <TextView
            android:id="@+id/textNoTelpName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:layout_marginLeft="50dp"
            android:layout_marginBottom="70dp"
            android:hint="@string/text13"
            android:textColor="@color/txt"
            android:textSize="13dp">
        </TextView>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_nav_user"
            app:itemBackground="@color/txt2"
            app:itemTextColor="@drawable/selector"
            app:itemIconTint="@drawable/selector"
            android:textColor="@color/txt"
            app:menu="@menu/menu_botnavbar_user"
            android:layout_alignParentBottom="true"/>

    </LinearLayout>

</ScrollView>